--- a/freakystyle/common/frameworks/base/core/res/res/values/colors.xml
+++ b/freakystyle/common/frameworks/base/core/res/res/values/colors.xml
@@ -18,6 +18,20 @@
 -->
 <resources>
     <!-- Default user icon colors -->
+<color name="background_material_light">#ffffffff</color>
+    <color name="background_material_dark">#ff202124</color>
+    <color name="background_floating_material_dark">#ff313235</color>
+    <color name="error_color_material_dark">#fff28b82</color>
+    <color name="error_color_material_light">#ffd93025</color>
+    <color name="primary_dark_material_dark">#ff202124</color>
+    <color name="primary_dark_material_settings">#ff202124</color>
+    <color name="primary_dark_material_settings_light">#ffffffff</color>
+    <color name="primary_material_dark">#ff202124</color>
+    <color name="primary_material_settings">#ff202124</color>
+    <color name="primary_material_settings_light">#ffffffff</color>
+    <color name="quaternary_material_settings">#ff9e9e9e</color>
+    <color name="secondary_material_settings">#ff313235</color>
+    <color name="tertiary_material_settings">#ff616161</color>
     <color name="user_icon_1">#ff00f801</color>
     <color name="user_icon_2">#ff5c6bc0</color>
     <color name="user_icon_3">#ff26a69a</color>
