--- a/freakystyle/common/frameworks/base/core/res/res/values/colors.xml
+++ b/freakystyle/common/frameworks/base/core/res/res/values/colors.xml
@@ -32,6 +32,8 @@
     <color name="quaternary_material_settings">#ff9e9e9e</color>
     <color name="secondary_material_settings">#ff313235</color>
     <color name="tertiary_material_settings">#ff616161</color>
+    <color name="primary_custom_dark_settings">#ff202124</color>
+    <color name="primary_custom_dark_settings_dark">#ff202124</color>
     <color name="user_icon_1">#ff00f801</color>
     <color name="user_icon_2">#ff5c6bc0</color>
     <color name="user_icon_3">#ff26a69a</color>
