--- a/freakystyle/common/frameworks/base/core/res/res/values/colors_device_defaults.xml
+++ b/freakystyle/common/frameworks/base/core/res/res/values/colors_device_defaults.xml
@@ -29,6 +29,8 @@
     <color name="quaternary_device_default_settings">#ff9e9e9e</color>
     <color name="secondary_device_default_settings">#ff3a3a3a</color>
     <color name="tertiary_device_default_settings">#ff616161</color>
+    <color name="primary_custom_dark_settings">#ff202124</color>
+    <color name="primary_custom_dark_settings_dark">#ff202124</color>
     <color name="edge_effect_device_default_light">@*android:color/accent_device_default_light</color>
     <color name="edge_effect_device_default_dark">@*android:color/accent_device_default_dark</color>
 </resources>
