--- a/freakystyle/common/frameworks/base/core/res/res/values/colors.xml
+++ b/freakystyle/common/frameworks/base/core/res/res/values/colors.xml
@@ -18,7 +18,19 @@
 -->
 <resources>
     <!-- Default user icon colors -->
-    <color name="user_icon_1">#ff00f801</color>
+<!-- Colors specific to DeviceDefault themes. These are mostly pass-throughs to enable
+     overlaying new theme colors. -->
+    <color name="accent_material_dark">#ff00f801</color>
+    <color name="accent_material_light">#ff0dde0e</color>
+    <color name="background_device_default_light">@android:color/white</color>
+    <color name="primary_custom_dark_settings">#ff202125</color>
+    <color name="primary_custom_dark_settings_dark">#ff202125</color>
+    <color name="primary_dark_material_settings">#ff202125</color>
+    <color name="primary_dark_material_settings_light">@android:color/white</color>
+    <color name="primary_material_settings">#ff202125</color>
+    <color name="primary_material_settings_light">@android:color/white</color>
+
+    <color name="user_icon_1">@*android:color/accent_device_default_dark</color>
     <color name="user_icon_2">#ff5c6bc0</color>
     <color name="user_icon_3">#ff26a69a</color>
     <color name="user_icon_4">#ffec407a</color>
