--- a/freakystyle/overlay/frameworks/base/core/res/res/values/colors_device_defaults.xml
+++ b/freakystyle/overlay/frameworks/base/core/res/res/values/colors_device_defaults.xml
@@ -33,6 +33,6 @@
     <color name="secondary_device_default_settings">#ff3a3a3a</color>
     <color name="system_error">#ffea4335</color>
     <color name="tertiary_device_default_settings">#ff616161</color>
-    <color name="edge_effect_device_default_light">@android:color/accent_device_default_light</color>
-    <color name="edge_effect_device_default_dark">@android:color/accent_device_default_dark</color>
+    <color name="edge_effect_device_default_light">@*android:color/accent_device_default_light</color>
+    <color name="edge_effect_device_default_dark">@*android:color/accent_device_default_dark</color>
 </resources>
