vendor: overlay: Add FPS info path
Change-Id: Ic1ddb7a4fe696463d3de9b1c73a49ff95cdff6cd
Signed-off-by: bunnyyTheFreak <hsinghalk@yahoo.com>

--- a/freakystyle/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/freakystyle/overlay/frameworks/base/core/res/res/values/config.xml
@@ -349,4 +349,7 @@
 
     <!-- Allows setting custom fontFeatureSettings on specific text. -->
     <string name="config_headlineFontFeatureSettings">ss03</string>
+
+    <!-- FPSInfoService FPS node file path -->
+    <string name="config_fpsInfoSysNode" translatable="false">/sys/devices/virtual/graphics/fb0/measured_fps</string>
 </resources>
